--- a/src/JabbrClientCpp/JabbrClientCpp.vcxproj
+++ b/src/JabbrClientCpp/JabbrClientCpp.vcxproj
@@ -88,8 +88,15 @@
     <ClInclude Include="..\..\include\jabbrclient\authentication_provider.h" />
     <ClInclude Include="..\..\include\jabbrclient\default_authentication_provider.h" />
     <ClInclude Include="..\..\include\jabbrclient\jabbr_client.h" />
+    <ClInclude Include="..\..\include\jabbrclient\log_on_info.h" />
+    <ClInclude Include="..\..\include\jabbrclient\message.h" />
+    <ClInclude Include="..\..\include\jabbrclient\room.h" />
+    <ClInclude Include="..\..\include\jabbrclient\user.h" />
+    <ClInclude Include="..\..\include\jabbrclient\user_status.h" />
     <ClInclude Include="..\..\include\jabbrclient\_exports.h" />
+    <ClInclude Include="jabbr_events.h" />
     <ClInclude Include="jabbr_client_impl.h" />
+    <ClInclude Include="json_materializer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -105,6 +112,7 @@
     </ClCompile>
     <ClCompile Include="jabbr_client.cpp" />
     <ClCompile Include="jabbr_client_impl.cpp" />
+    <ClCompile Include="json_materializer.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
