--- a/src/JabbrChatCpp/JabbrChatCpp.vcxproj
+++ b/src/JabbrChatCpp/JabbrChatCpp.vcxproj
@@ -95,6 +95,7 @@
     <ClInclude Include="jabbr_room.h" />
     <ClInclude Include="jabbr_user.h" />
     <ClInclude Include="panel.h" />
+    <ClInclude Include="parser.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -106,6 +107,7 @@
     <ClCompile Include="jabbr_room.cpp" />
     <ClCompile Include="jabbr_user.cpp" />
     <ClCompile Include="panel.cpp" />
+    <ClCompile Include="parser.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
