--- a/src/JabbrChatCpp/JabbrChatCpp.vcxproj.filters
+++ b/src/JabbrChatCpp/JabbrChatCpp.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="parser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="jabbr_chat.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -72,6 +75,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="parser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="jabbr_chat.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
