--- a/src/JabbrChatCpp/JabbrChatCpp.vcxproj.filters
+++ b/src/JabbrChatCpp/JabbrChatCpp.vcxproj.filters
@@ -48,6 +48,15 @@
     <ClInclude Include="jabbr_chat.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="command_type.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="command.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="util.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -78,6 +87,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="jabbr_chat.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="util.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
