--- a/src/JabbrChatCpp/packages.config
+++ b/src/JabbrChatCpp/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="cpprestsdk" version="2.5.0-dev" targetFramework="Native" />
-  <package id="Microsoft.AspNet.SignalR.Client.Cpp" version="1.0.1-cas250" targetFramework="Native" />
+  <package id="cpprestsdk.v120.windesktop.msvcstl.dyn.rt-dyn" version="2.5.0" targetFramework="Native" />
+  <package id="Microsoft.AspNet.SignalR.Client.Cpp.v120.WinDesktop" version="1.0.0-alpha1" targetFramework="Native" />
 </packages>
